feat: initial publish

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Installing dependencies
         run: yarn
 
-      - name: Building files
+      - name: Build
         run: yarn build
 
       - name: Release
